@@ -52,18 +52,7 @@ require 'ftools'
 require 'getoptlong'
 require 'date'
 
-class InvalidSymbolicLink < Exception; end
 class File
-  def self.safe_readlink (path)
-    dest = File.readlink(path)
-    # On Linux 2.6.6, File.readlink("/proc/*/exe") may
-    # return a string containing a NUL character.
-    if dest.include?("\0")
-      raise InvalidSymbolicLink.new("invalid symbolic link: #{dest}") 
-    end
-    return dest
-  end
-
   def self.real_file? (path)
     File.file?(path) and not File.symlink?(path)
   end
@@ -818,19 +807,15 @@ module Pdumpfs
     end
 
     def exclude? (path)
-      begin
-        stat = File.lstat(path)
+      stat = File.lstat(path)
 
-        if @size >= 0 and stat.file? and stat.size >= @size
-          return true
-        elsif @patterns.find {|pattern| pattern.match(path) }
-          return true
-        elsif stat.file? and
-            @globs.find {|glob| File.fnmatch(glob, File.basename(path)) }
-          return true
-        end
-      rescue Errno::ENOENT => e
-        wprintf("%s", e.message)
+      if @size >= 0 and stat.file? and stat.size >= @size
+        return true
+      elsif @patterns.find {|pattern| pattern.match(path) }
+        return true
+      elsif stat.file? and
+          @globs.find {|glob| File.fnmatch(glob, File.basename(path)) }
+        return true
       end
       return false
     end
@@ -1039,7 +1024,7 @@ module Pdumpfs
       when "new_file"
         copy(src, today)
       when "symlink"
-        File.force_symlink(File.safe_readlink(src), today)
+        File.force_symlink(File.readlink(src), today)
       when "unsupported"
         # just ignore it
       else
@@ -1074,7 +1059,7 @@ module Pdumpfs
         begin
           update_file(s, l, t)
           dirs[t] = File.stat(s) if File.ftype(s) == "directory"
-        rescue SystemCallError, InvalidSymbolicLink => e
+        rescue Errno::ENOENT, Errno::EACCES => e
           wprintf("%s: %s", src, e.message)
           next
         end
@@ -1106,7 +1091,7 @@ module Pdumpfs
           when "new_file"
             copy(s, t)
           when "symlink"
-            File.force_symlink(File.safe_readlink(s), t)
+            File.force_symlink(File.readlink(s), t)
           when "unsupported"
             # just ignore it
           else
@@ -1114,7 +1099,7 @@ module Pdumpfs
           end
           chown_if_root(type, s, t)
           dirs[t] = File.stat(s) if File.ftype(s) == "directory"
-        rescue SystemCallError, InvalidSymbolicLink => e
+        rescue Errno::ENOENT, Errno::EACCES => e
           wprintf("%s: %s", s, e.message)
           next
         end
